Fix #113461: Cycles subsurface artifacts with volume interior

Ignore self for the volume stack update from the the subsurface entry to
the exit point. This was meant for other objects only.