intern/cycles/kernel/integrator/intersect_volume_stack.h
@@ -46,6 +46,10 @@ ccl_device void integrator_volume_stack_update_for_subsurface(KernelGlobals kg,
     qsort(hits, num_hits, sizeof(Intersection), intersections_compare);
 
     for (uint hit = 0; hit < num_hits; ++hit, ++isect) {
+      /* Ignore self, SSS itself already enters and exits the object. */
+      if (isect->object == volume_ray.self.object) {
+        continue;
+      }
       shader_setup_from_ray(kg, stack_sd, &volume_ray, isect);
       volume_stack_enter_exit(kg, state, stack_sd);
     }
@@ -55,9 +59,11 @@ ccl_device void integrator_volume_stack_update_for_subsurface(KernelGlobals kg,
   int step = 0;
   while (step < 2 * volume_stack_size &&
          scene_intersect_volume(kg, &volume_ray, &isect, visibility)) {
-    shader_setup_from_ray(kg, stack_sd, &volume_ray, &isect);
-    volume_stack_enter_exit(kg, state, stack_sd);
-
+    /* Ignore self, SSS itself already enters and exits the object. */
+    if (isect.object != volume_ray.self.object) {
+      shader_setup_from_ray(kg, stack_sd, &volume_ray, &isect);
+      volume_stack_enter_exit(kg, state, stack_sd);
+    }
     /* Move ray forward. */
     volume_ray.tmin = intersection_t_offset(isect.t);
     volume_ray.self.object = isect.object;
